--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>NodeTodo</h1>
+        <form method="POST" action="/todos">
+            <input type="hidden" name="myData" value="Some Value">
+            <button type="submit">This is a link</button>
+        </form>  
     </body>
 </html>
